# swagger-output.json
@@ -198,19 +198,6 @@
         }
       }
     },
-    "/api/provider": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/api/medicationadmin": {
       "get": {
         "description": "",
